--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -21,7 +21,13 @@ Imports:
     httr2,
     magrittr,
     purrr,
-    DT
+    DT,
+    glue,
+    rvest,
+    httr,
+    shinybusy,
+    stringr,
+    xml2
 Encoding: UTF-8
 LazyData: true
 RoxygenNote: 7.1.1
